# ClaimSenseAI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routers/: batch.py  claims.py
data/: carc_rarc_codes.json  synthetic_claims.json
prompts/: batch_clustering.txt  denial_analysis.txt  pattern_matching.txt
src/: __init__.py  batch_clusterer.py  data_loader.py  denial_analyzer.py  llm_client.py  models.py  pattern_matcher.py
tests/: test_data_loader.py  test_denial_analyzer.py  test_pattern_matcher.py
